checker/tests/parsing/errors/fn_options_after_returns.mft
fn f {
  operand X;
  returns Y;
  options {}
}
=== error ===
Unrecognized token `options` found at 35:42
Expected one of "}"